@@ -2,6 +2,8 @@ ver 0.20.18 (not yet released)
 * decoder
   - flac: improve seeking precision
 * fix gapless CUE song transitions
+* Android
+  - enable the NFS storage plugin
 
 ver 0.20.17 (2018/02/11)
 * output
